@@ -2,6 +2,7 @@
 * Impr: Checkbox replaced with tristate checkbox in multi-edit form in GridPanel.
 * Impr: Column renderers reworked, allowing for more flexibility and cleanness.
 * Fix:  After applying changes to a grid disable "Edit in form" action.
+* Impr: Grid forms are now getting the same fields as specified for the grid.
 
 = v0.5.9 - 2010-06-11
 * !!!: after updating to this version, run script/generate netzke_basepack
@@ -19,7 +20,7 @@
 * Impr: Multi-level column/fields configuration reworked and made more consistent.
 * New: New configuration layer introduced between the AR models and the rest of Netzke widgets. Use AttributesConfigurator to access it.
 * New: FamFamFam Silk icons support.
-* Impr: Reworked Netzke (virtual) attributes for Grid/FormPanel
+* Impr: Reworked defining Netzke (virtual) attributes for Grid/FormPanel.
 
 = v0.5.8 - 2010-03-12
 * Fix: GertThiel's method_missing-related fix enabling better compatibility with other Ruby libs
